src/javascript/crypto/e2e/extension/ui/styles/base.css
/* Copyright 2015 Yahoo Inc. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
*/
/**
 * Defines the styles that are common throughout the entire UI.
 */

body {
  border: none;
  color: YCOLOR_GREY_10;
  font-family: "Helvetica Neue","Segoe UI",Helvetica,Arial,"Lucida Grande",sans-serif;
  font-size: 14px;
  margin: 0;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
}

.pgpActions button,
.modal-dialog button, #callbackDialog button,
#storedKeys button, #pgpGenerateKey button {
  box-sizing: border-box;
  height: 32px;
  line-height: 30px;
  padding: 0 25px;
  background-color: BTN_PRIMARY;
  color: BTN_PRIMARY_TEXT;
  box-shadow: 0 2px #063A93;
  border-radius: 3px;
  font-weight: 400;
  border: 2px solid transparent;
  cursor: pointer;
  margin: 15px 5px 15px 0;
  font-size: 13px;
  outline: none;
}

.pgpActions button:hover,
.modal-dialog button:hover,
#callbackDialog button:hover,
#storedKeys button:hover,
#pgpGenerateKey button:hover {
  background-color: BTN_PRIMARY_HOVER;
}

.pgpActions button:disabled,
.modal-dialog button:disabled,
#callbackDialog button:disabled,
#storedKeys button:disabled,
#pgpGenerateKey button:disabled {
  background-color: BTN_PRIMARY_INACTIVE;
  color: BTN_PRIMARY_INACTIVE_TEXT;
}

.pgpActions button.cancel,
.modal-dialog button.cancel,
#callbackDialog button.cancel,
#storedKeys button.cancel,
#pgpGenerateKey button.cancel/*,
button.options,
button.save*/ {
  box-shadow: 0 2px #ABAEB7;
  background-color: BTN_CANCEL;
  color: BTN_CANCEL_TEXT;
}

.pgpActions button.cancel:hover,
.modal-dialog button.cancel:hover,
#callbackDialog button.cancel:hover,
#storedKeys button.cancel:hover,
#pgpGenerateKey button.cancel:hover/*,
button.options:hover,
button.save:hover*/ {
  background-color: BTN_CANCEL_HOVER;
  color: BTN_CANCEL_HOVER_TEXT;
}

input:hover,
input:focus {
  outline: none;
}



#pgpBody {
  padding: 0;
}

.pgpHead {
  border: solid #404040;
  border-width: 0 0 1px;
  margin-bottom: 5px;
  padding: 1px 0;
  z-index: 60;
  background: url('images/icon-48.png') #404040 8px 50% no-repeat;
  padding-left: 40px;
  background-size: 32px;
}

.pgpHead > div {
   padding: 0 15px;
}

.pgpHead h1 {
  color: #ffffff;
  font-size: 1.53846154em;
  font-weight: normal;
  white-space: nowrap;
}

#callbackDialog > div,
.overlayDialog {
  background-color: YCOLOR_WHITE;
  border: 1px solid YCOLOR_GREY_6;
  border-radius: 5px;
  box-shadow: 0 4px 16px rgba(0,0,0,0.2);
  padding: 10px;
  position: absolute;
}

#callbackDialog > div {
  width: 550px;
  max-height: 75%;
  overflow-y: auto;
  overflow-x: hidden;
}

#callbackDialog input[type="password"],
#callbackDialog input[type="text"] {
  border: 1px solid YCOLOR_GREY_6;
  margin: 5px 0;
  width: 540px;
}

#callbackDialog {
  pointer-events: auto;
}

.hidden {
  display: none;
}

.transparent {
  opacity: 0.4;
}

.invisible {
  visibility: hidden;
}

.key-info {
  padding: 5px;
  width: 530px;
}

.key-meta {
  opacity: .6;
}

.key-meta > * {
  display: inline-block;
}

.key-type-description {
  display: inline-block;
  min-width: 140px;
}

.keyring-signup {
  position: relative;
  padding-left: 10px;
}

.keyring-signup:before {
  content: '+';
  position: absolute;
  left: 0;
  margin-top: 2px;
  font-size: 11px;
}

.keyring-signup:hover {
  text-decoration: underline;
}

.key-fingerprint {
  white-space: pre;
}

.keyring-backup-window {
  text-align: center;
  width: 300px;
}

.keyring-backup-window > div {
  font-size: 1.2em;
  font-weight: bold;
}

.keyring-backup-window td {
  border: 1px solid black;
  padding: 5px;
}

.keyring-backup-window span {
  color: red;
  font-size: .9em;
  font-weight: bold;
}

.error {
  color: YCOLOR_RED_2B;
  font-size: 1em;
  margin-bottom: 7px;
  text-align: center;
}

#errorDiv {
  color: YCOLOR_RED_2B;
  font-size: 1em;
  margin-bottom: 7px;
  text-align: center;
}

#setup-backup-content {
  font-size: 1.2em;
  font-weight: bold;
  padding: 20px;
  color: red;
}

#setup-intro-content {
  font-weight: bold;
}

.unclickable {
  pointer-events: none;
}

.select-all-link {
  color: #acacac;
  cursor: pointer;
  margin: 0 3px;
}

.select-all-link:hover {
  color: #0c0c0c;
}

/* below are yahoo-specific */

.pgpHead {
  /* fujigradient from Yahoo Messenger */
  border-bottom: 0 solid;
  background: linear-gradient(45deg,#3cb1bd 0,#4e72d0 50%,#5f2ae1 100%);
  padding-left: 0;
  margin-bottom: 12px
}

.pgpHead h1 {
  background: url(images/yahoo/icon-32.png) no-repeat;
  padding: 0 10px 0 45px;
  margin: 15px 0;
  color: YCOLOR_WHITE;
}

.overlayDialog textarea {
  width: 98%;
  height: 80px;
}

#callbackDialog {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 0;
  background: rgba(50, 50, 50, 0.2);
}

#pgpBody.transparent + div#callbackDialog {
  height: 100%;
  overflow: auto;
}

#callbackDialog > div {
  position: static;
  margin: 8% auto;
}

#callbackDialog > div p:first-child {
  font-size: 105%;
  font-weight: 500;
  margin: 0 0 15px 0;
}

#callbackDialog input[type=checkbox] {
  margin-right: 5px;
}

.keyring-signup, #callbackDialog label[for], #pgpGenerateKey label[for] {
  cursor: pointer;
  color: -webkit-link;
  text-decoration: underline;
}

.key-info {
  padding-left: 15px;
}

.key-info-plus {
  background: #eaffea;
}

.key-info-minus {
  background: #ffecec;
}

.key-info-plus span:before, .key-info-minus span:before {
  content: '+';
  position: absolute;
  margin-left: -10px;
  font-weight: bolder;
  font-size: 90%;
}

.key-info-minus span:before {
  content: '-';
}




.user-content:not(.loader) {
  margin: 2px 21px 0 0;
}

.richtext p {
  margin: 0;
}

